# gfluid

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  helper.rs  lib.rs  types.rs
src/lua/: main.lua  mod.rs
src/state/: mod.rs
src/state/geometry/: mod.rs  shapes.rs  triangles.rs
src/state/geometry/collision/: capsule.rs  cube.rs  mod.rs  sphere.rs
src/state/particle/: factory.rs  mod.rs
