[package]
name = "gfluid"
version = "0.3.1"
authors = ["Vurv78 <vurvdevelops@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rglua = "3.0.0-beta"
nvflex-sys = { version = "0.3.0", git = "https://github.com/Vurv78/nvflex-sys", optional = true, default-features = false }

derivative = "2.2.0"
thiserror = "1.0.30"

[features]
default = ["nvflex-sys/D3D"]
ci = ["nvflex-sys"]